--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -22,12 +22,16 @@
         </div>
     </nav> <!-- 상단고정바-->
 
-    <div class="wrapper"><--반응형 웹 구조-->
+    <section class="wrapper"><!--반응형 웹 구조-->
         <div class="section1"></div> <!-- 좌측에 블럭들 위치해있는 section-->
-        <div class="section2"></div> <!-- 중하에 시각적 블럭 영역 svg section-->
-        <div class="section3"></div> <!-- 중상에 선택한 요소 조작 section-->
-        <div class="section4"></div> <!-- 웇흑에 미리보기 section-->
-    </div>
+        <div class="section2"></div>
+            <div class="section2_1"></div>  <!-- 중하에 시각적 블럭 영역 svg section-->
+            <div class="section2_2"></div> <!-- 중상에 선택한 요소 조작 section-->
+        <div class="section3"></div> <!-- 웇흑에 미리보기 section-->
+    </section>
+
+
+    <footer class="panel-footer"></footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
