Update css relative layout
창 너비가 768px 이하로 떨어지는 경우 section 1,3을 숨기고 section 2 부분을 100%로 만드는 코드 삽입

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/bootstrap.css"?
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
     <nav class="navar navbar-inverse navbar-fixed-top">  <!-- 상단 nav 고정 바 -->
@@ -16,9 +16,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">스뮤고개</a>
-
+                <div class="navbar-profile"><a href="#">XXX(이름)</a></div>  <!-- nav 프로필 영역 -->
             </div>
-            <div class="navbar-profile"><a href="#">XXX(이름)</a></div>  <!-- nav 프로필 영역 -->
+
         </div>
     </nav> <!-- 상단고정바-->
 
