--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <style>
+
+
+    </style>
 </head>
 <body>
     <nav class="navar navbar-inverse navbar-fixed-top">  <!-- 상단 nav 고정 바 -->
@@ -26,9 +30,15 @@
         <div class="section1"></div> <!-- 좌측에 블럭들 위치해있는 section-->
         <div class="section2">
             <div class="section2_1"></div>  <!-- 중하에 시각적 블럭 영역 svg section-->
-            <div class="chatbot_Flow"></div> <!-- 중상에 선택한 요소 조작 section-->
+            <div class="chatbot_Flow">
+
+                <svg class="svg-chart"></svg>
+            </div> <!-- 중상에 선택한 요소 조작 section-->
         </div>
-        <div class="section3"></div> <!-- 웇흑에 미리보기 section-->
+        <div class="section3"><!-- 웇흑에 미리보기 section-->
+            <i class="fas fa-angle-right"></i>
+
+        </div>
     </section>
 
 
