요소칸 수정
draggable 하려면 svg가 통합되어있어야 함.
그러니 그냥 요소 클릭하면 생성되게끔합시다.

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -21,7 +21,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">스뮤고개</a>
-                <div class="navbar-profile"><a href="#">XXX(이름)</a></div>  <!-- nav 프로필 영역 -->
+                <a href="#" class="navbar-profile">홍길동</a><!-- nav 프로필 영역 -->
+                <img class="navbar-proimg">
             </div>
 
         </div>
@@ -29,11 +30,13 @@
 
     <section class="wrapper"><!--반응형 웹 구조-->
         <div class="section1">
-            <svg class="templete" xmlns="http://www.w3.org/2000/svg">
-                <foreignObject width="100%" height="100%">
-                        <div class="form1" xmlns="http://www.w3.org/1999/xhtml">폼1</div>
-                </foreignObject>
-            </svg>
+            <div class="elements_section">
+                <svg class="templete" xmlns="http://www.w3.org/2000/svg">
+                    <foreignObject width="100%" height="100%">
+                            <div class="form1" xmlns="http://www.w3.org/1999/xhtml">폼1</div>
+                    </foreignObject>
+                </svg>
+            </div>
         </div> <!-- 좌측에 블럭들 위치해있는 section-->
         <div class="section2">
             <div class="section2_1"></div>  <!-- 중하에 시각적 블럭 영역 svg section-->
