--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -31,9 +31,10 @@
     <section class="wrapper"><!--반응형 웹 구조-->
         <div class="section1">
             <div class="elements_section">
-                <svg class="templete" xmlns="http://www.w3.org/2000/svg">
+                <svg class="templetebox" xmlns="http://www.w3.org/2000/svg">
                     <foreignObject width="100%" height="100%">
-                            <div class="form1" xmlns="http://www.w3.org/1999/xhtml">폼1</div>
+                            <div class="templete templete1" xmlns="http://www.w3.org/1999/xhtml">폼1</div>
+                            <div class="templete templete2" xmlns="http://www.w3.org/1999/xhtml">폼2</div>
                     </foreignObject>
                 </svg>
             </div>
@@ -43,9 +44,7 @@
             <div class="chatbot_Flow">
 
                 <svg class="svg-chart"  xmlns="http://www.w3.org/2000/svg">
-                    <foreignObject width="100%" height="100%">
-                            <div class="form1 outer" xmlns="http://www.w3.org/1999/xhtml">폼1</div>
-                            <div class="form1" xmlns="http://www.w3.org/1999/xhtml">폼2</div>
+                    <foreignObject class="svg-foreign" width="100%" height="100%">
                     </foreignObject>
                 </svg>
             </div> <!-- 중상에 선택한 요소 조작 section-->
