창작마당 버튼 추가

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -37,6 +37,8 @@
                     </foreignObject>
                 </svg>
             </div>
+            <a href="#">
+            <div class="madang">창작마당</div></a>
         </div> <!-- 좌측에 블럭들 위치해있는 section-->
         <div class="section2">
             <div class="section2_1"></div>  <!-- 중하에 시각적 블럭 영역 svg section-->
