--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -31,21 +31,31 @@
     <section class="wrapper"><!--반응형 웹 구조-->
         <div class="section1">
             <div class="elements_section">
-                <svg class="templetebox" xmlns="http://www.w3.org/2000/svg">
-                    <foreignObject width="100%" height="100%">
-                            <div class="templete templete1" xmlns="http://www.w3.org/1999/xhtml">폼1</div>
-                            <div class="templete templete2" xmlns="http://www.w3.org/1999/xhtml">폼2</div>
-                    </foreignObject>
-                </svg>
+                            <br><p>기본 요소</p><hr>
+                            <div class="templete templete1" draggable="true" ondragstart="drag(event)" xmlns="http://www.w3.org/1999/xhtml">텍스트</div>
+                            <div class="templete templete2" xmlns="http://www.w3.org/1999/xhtml">리스트</div>
+                            <div class="templete templete3" xmlns="http://www.w3.org/1999/xhtml">이미지</div>
+                            <div class="templete templete4" xmlns="http://www.w3.org/1999/xhtml">동영상</div>
+                            <div class="templete templete5" xmlns="http://www.w3.org/1999/xhtml">음성</div>
+                            <div class="templete templete6" xmlns="http://www.w3.org/1999/xhtml">임시</div>
+
+                            <hr><p>고급 요소</p><hr>
+                            <div class="templete_adv templete1" xmlns="http://www.w3.org/1999/xhtml">알림메세지</div>
+                            <div class="templete_adv templete1" xmlns="http://www.w3.org/1999/xhtml">예약 Form</div>
+                            <div class="templete_adv templete1" xmlns="http://www.w3.org/1999/xhtml">투표 Form</div>
+
+                            <hr><p>다운로드한 요소</p><hr>
+                            <a href="#"><div class="madang">창작마당</div></a>
+
+
             </div>
-            <a href="#">
-            <div class="madang">창작마당</div></a>
+
         </div> <!-- 좌측에 블럭들 위치해있는 section-->
         <div class="section2">
             <div class="section2_1"></div>  <!-- 중하에 시각적 블럭 영역 svg section-->
             <div class="chatbot_Flow">
 
-                <svg class="svg-chart"  xmlns="http://www.w3.org/2000/svg">
+                <svg class="svg-chart"  xmlns="http://www.w3.org/2000/svg" ondrop="drop(event)" ondragover="allowDrop(event)">
                     <foreignObject class="svg-foreign" width="100%" height="100%">
                     </foreignObject>
                 </svg>
