미리보기, 메세지 영역 추가

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -63,6 +63,8 @@
         </div>
         <div class="section3"><!-- 웇흑에 미리보기 section-->
             <i class="fas fa-angle-right"></i>
+            <div class="preview"></div>
+            <a href="#"><div class="message">메세지</div></a>
 
         </div>
     </section>
