레이아웃 접기, 반응형 레이아웃 추가

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -79,8 +79,8 @@
                 </div>
             </div> <!-- 중상에 선택한 요소 조작 section-->
         </div>
-        <div class="section3"><!-- 웇흑에 미리보기 section-->
-            <i class="fas fa-angle-right"></i>
+        <div class="section3" id="right_section"><!-- 웇흑에 미리보기 section-->
+            <input type="button" class="fold_layout" id="fold_button" onclick="fold_layout()" value=">>" >
             <div class="preview"></div>
             <a href="#"><div class="message">메세지</div></a>
 
