리스트 요소 디자인, 애니메이션 효과 추가

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -40,10 +40,17 @@
             <div class="elements_section">
                             <br><p>기본 요소</p><hr>
                             <div class="templete templete1" id="text" draggable="true" ondragstart="drag(event)" xmlns="http://www.w3.org/1999/xhtml">
-                                <div id="text_icon"><p>___________<br>___________</p></div>
+                                <div class = "icon"><p>___________<br>___________</p></div>
                                 <p style="font-size:16px; padding-top:2px;">텍스트</p>
                             </div>
-                            <div class="templete templete2" xmlns="http://www.w3.org/1999/xhtml"><div id="list_icon"></div>
+                            <div class="templete templete2" id="list" xmlns="http://www.w3.org/1999/xhtml">
+                                <div class = "icon">
+                                    <p style="margin: 0 0 3px; padding-top: 5px;">___________</p>
+                                    <div class = "list_ex" id="ex_1"></div>
+                                    <div class = "list_ex" id="ex_2"></div>
+                                    <div class = "list_ex" id="ex_3"></div>
+                                </div>
+
                                 <p style="font-size:16px; padding-top:2px;">리스트</div>
                             <div class="templete templete3" xmlns="http://www.w3.org/1999/xhtml">이미지</div>
                             <div class="templete templete4" xmlns="http://www.w3.org/1999/xhtml">동영상</div>
