--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -37,12 +37,14 @@
     <section class="wrapper"><!--반응형 웹 구조-->
         <div class="section1">
             <div class="elements_section">
-                            <div id="normal_elements" onclick="fold_normal()" value="open"><br>
-                                <div class="fold_normal"></div>
-                                <div class="fold_normal2"></div>
-                                <p style="display: inline">기본 요소&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p><hr>
+                            <div id="normal_elements" onclick="fold_normal()" value="open">
+                                <div class="fold_normal" id="fold1"></div>
+                                <div class="fold_normal2" id="fold2"></div>
+
+                                <p style="display: inline">&nbsp;&nbsp;기본 요소&nbsp;&nbsp;</p><br>
                             </div>
                             <div id="template">
+                                <br>
                                 <div class="templete templete1" id="text" xmlns="http://www.w3.org/1999/xhtml">
                                     <div class = "icon"><p>___________<br>___________</p></div>
                                     <p style="font-size:16px; padding-top:2px;">텍스트</p>
@@ -79,19 +81,30 @@
                                     </div>
                                     <p style="font-size:16px; padding-top:2px;">파일</p>
                                 </div>
+                                <br><br>
                             </div>
-                            <div id="adv_elements" onclick="fold_adv()" value="open"><br>
-                                <hr>
-                                <div class="fold_normal"></div>
-                                <div class="fold_normal2"></div>
-                                <p style="display: inline">고급 요소&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p><hr>
+                            <div id="adv_elements" onclick="fold_adv()" value="open">
+                                <div class="fold_normal" id="fold3"></div>
+                                <div class="fold_normal2" id="fold4"></div>
+                                <p style="display: inline">고급 요소&nbsp;&nbsp;&nbsp;</p>
                             </div>
                             <div id ="adv_template">
-                                <div class="templete_adv templete1" xmlns="http://www.w3.org/1999/xhtml">알림메세지</div>
-                                <div class="templete_adv templete1" xmlns="http://www.w3.org/1999/xhtml">예약 Form</div>
-                                <div class="templete_adv templete1" xmlns="http://www.w3.org/1999/xhtml">투표 Form</div>
+                                <br>
+                                <div class="templete_adv" id="adv_test">
+                                    <div class="templete_image"><div class="templete_priview"></div></div>
+                                    <div class="templete_name"></div>
+                                    <div class="templete_dis"></div>
+
+                                </div>
+                                <div class="templete_adv" xmlns="http://www.w3.org/1999/xhtml">알림메세지</div>
+                                <div class="templete_adv" xmlns="http://www.w3.org/1999/xhtml">예약 Form</div>
+                                <div class="templete_adv" xmlns="http://www.w3.org/1999/xhtml">투표 Form</div>
+                                <br><br>
                             </div>
-                            <hr><p>다운로드한 요소</p><hr>
+                            <div id="download_elements">
+                                <p style="display: inline">다운로드한 요소</p>
+                            </div>
+
                             <a href="#"><div class="madang">창작마당</div></a>
 
 
