고급 요소 템플릿 디자인 업데이트

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -12,6 +12,8 @@
         @font-face { font-family: 'NanumSquareRound'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff'); font-weight: normal; font-style: normal; }
         * {font-family: NanumSquareRound, 나눔고딕;}
 
+
+
     </style>
 
 
@@ -91,10 +93,14 @@
                             <div id ="adv_template">
                                 <br>
                                 <div class="templete_adv" id="adv_test">
-                                    <div class="templete_image"><div class="templete_priview"></div></div>
-                                    <div class="templete_name"></div>
+                                    <div class="templete_image"><img scr="#"><div class="templete_priview"><p>미리보기</p></div></div>
+                                    <div class="templete_name"><p style="font-weight:800">""</p></div>
                                     <div class="templete_dis"></div>
-
+                                </div>
+                                <div class="templete_adv" id="alert_m">
+                                    <div class="templete_image"><img src="./css/images/alarms.svg"><div class="templete_priview"><p>미리보기</p></div></div>
+                                    <div class="templete_name"><p style="font-weight:800">알람메세지</p></div>
+                                    <div class="templete_dis"><p>특정시간에 챗봇 사용자들에게 원하는 메세지를 알람으로 보낼수 있다.</p></div>
                                 </div>
                                 <div class="templete_adv" xmlns="http://www.w3.org/1999/xhtml">알림메세지</div>
                                 <div class="templete_adv" xmlns="http://www.w3.org/1999/xhtml">예약 Form</div>
