고급 요소 디자인 적용

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -92,19 +92,22 @@
                             </div>
                             <div id ="adv_template">
                                 <br>
-                                <div class="templete_adv" id="adv_test">
-                                    <div class="templete_image"><img scr="#"><div class="templete_priview"><p>미리보기</p></div></div>
-                                    <div class="templete_name"><p style="font-weight:800">""</p></div>
-                                    <div class="templete_dis"></div>
-                                </div>
+
                                 <div class="templete_adv" id="alert_m">
                                     <div class="templete_image"><img src="./css/images/alarms.svg"><div class="templete_priview"><p>미리보기</p></div></div>
                                     <div class="templete_name"><p style="font-weight:800">알람메세지</p></div>
                                     <div class="templete_dis"><p>특정시간에 챗봇 사용자들에게 원하는 메세지를 알람으로 보낼수 있다.</p></div>
                                 </div>
-                                <div class="templete_adv" xmlns="http://www.w3.org/1999/xhtml">알림메세지</div>
-                                <div class="templete_adv" xmlns="http://www.w3.org/1999/xhtml">예약 Form</div>
-                                <div class="templete_adv" xmlns="http://www.w3.org/1999/xhtml">투표 Form</div>
+                                <div class="templete_adv" id="booking">
+                                    <div class="templete_image"><img scr="#"><div class="templete_priview"><p>미리보기</p></div></div>
+                                    <div class="templete_name"><p style="font-weight:800">예약 Form</p></div>
+                                    <div class="templete_dis">수요조사, 공동구매등에 사용가능한 예약 기능</div>
+                                </div>
+                                <div class="templete_adv" id="vote">
+                                    <div class="templete_image"><img scr="#"><div class="templete_priview"><p>미리보기</p></div></div>
+                                    <div class="templete_name"><p style="font-weight:800">투표 Form</p></div>
+                                    <div class="templete_dis">투표에 사용가능한 기능</div>
+                                </div>
                                 <br><br>
                             </div>
                             <div id="download_elements">
